--- a/trash_collector/templates/registration/login.html
+++ b/trash_collector/templates/registration/login.html
@@ -2,7 +2,7 @@
 
 {% block title %} Login Page {% endblock %}
 
-{% block header %} Login Page {% endblock %}
+{% block header %} Hello and Welcome to Trash Collector! {% endblock %}
 
 {% block content %}
 <h2>Log In</h2>
