--- a/trash_collector/templates/registration/register.html
+++ b/trash_collector/templates/registration/register.html
@@ -2,7 +2,7 @@
 
 {% block title %} Register Account {% endblock %}
 
-{% block header %} Register Account {% endblock %}
+{% block header %} Please Register Account {% endblock %}
 
 {% block content %}
   <h2>Sign up</h2>
