Small change to line 5

--- a/trash_collector/templates/home.html
+++ b/trash_collector/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block title %} Home Portal {% endblock %}
 
-{% block header %} Home Portal {% endblock %}
+{% block header %} Log-in {% endblock %}
 
 {% block content %}
 {% if user.is_authenticated %}
