--- a/trash_collector/templates/registration/register.html
+++ b/trash_collector/templates/registration/register.html
@@ -2,13 +2,20 @@
 
 {% block title %} Register Account {% endblock %}
 
-{% block header %} Please Register Account {% endblock %}
+{% block header %} <h1 class="display-1 text-center" id="title">Register Account</h1>{% endblock %}
 
 {% block content %}
-  <h2>Sign up</h2>
+<div class="row row-cols-auto justify-content-center">
+  <div class="col"></div>
+  <div class="col">
+    <div class="form-control">
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Sign Up</button>
-  </form>
+    <button class="form-control" type="submit">Sign Up</button>
+    </form>
+  </div>
+</div>
+   <div class="col"></div>
+</div>
 {% endblock %}
