--- a/trash_collector/templates/registration/login.html
+++ b/trash_collector/templates/registration/login.html
@@ -2,13 +2,19 @@
 
 {% block title %} Login Page {% endblock %}
 
-{% block header %} Hello and Welcome to Trash Collector! {% endblock %}
+{% block header %} <h1 class="display-1 text-center" id="title">Login Page</h1>{% endblock %}
 
 {% block content %}
-<h2>Log In</h2>
+<div class="row row-cols-auto d-flex justify-content-center">
+  <div class="col"></div>
+  <div class="col">
+    <form class="form-control" method="post">
 <form method="post">
   {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Log In</button>
-</form>
+  {{ form }}
+  <button class="form-control" type="submit">Log In</button>
+    </form>
+  </div>
+  <div class="col"></div>
+</div>
 {% endblock %}
