--- a/trash_collector/employees/templates/employees/filter_pickups.html
+++ b/trash_collector/employees/templates/employees/filter_pickups.html
@@ -1,29 +1,51 @@
 {% extends 'base.html' %}
 
-{% block title %} Filter Customers {% endblock %}
-
-{% block header %} Filter Customers {% endblock %}
+{% block title %} Weekly View{% endblock %}
+{% block header %}
+<h1 class="display-1 text-center" id="title">Weekly View</h1>
+{% endblock %}
 
 {% block content %}
-<h3>Hello {{ user.username }}!</h3>
-<div class="container text-center">
-  {% for customer in customers %}
-    <p>{{customer.name}} {{customer.address}} {{customer.zip_code}} {{customer.pickup_day}}</p>
-  {% endfor %}
-<div class="container text-center">
-<form action="{% url 'employees:filter_pickups' %}" method="post">
-    {% csrf_token %}
-    <label>Pickup Day:</label>
-    <select name="pickup_day">
-        <option value="Monday">Monday</option>
-        <option value="Tuesday">Tuesday</option>
-        <option value="Wednesday">Wednesday</option>
-        <option value="Thursday">Thursday</option>
-        <option value="Friday">Friday</option>
-        <option value="Saturday">Saturday</option>
-    </select><br>
-    <br>
-    <input type="submit" value="Submit">
-</form>
-</div>
+    <div class="row row-cols-auto d-flex justify-content-center">
+        <dvi class="col">
+            <p class="display-6 text-center" id="subtitle">Choose from a day below to see which customers have pickups scheduled</p>
+        </dvi>
+        <dvi class="col">
+            <div class="mb-3">
+                <form name='dayform' id="dayform" method="POST" action="{% url 'employees:daily' %}">
+                    {% csrf_token %}
+                    Day of Week:
+                    <select name="dayofweek" id="dayofweek">
+                    <option value="Monday" selected="Monday">Monday</option>
+                    <option value="Tuesday" selected="Tuesday">Tuesday</option>
+                    <option value="Wednesday" selected="Wednesday">Wednesday</option>
+                    <option value="Thursday" selected="Thursday">Thursday</option>
+                    <option value="Friday" selected="Friday">Friday</option>
+                    </select>
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
+
+        </dvi>
+        <dvi class="col" id="custom-table">
+            <table class="table table-striped table-hover table-light">
+                <caption style="color:whitesmoke;font-size:.75rem;">List of Customers</caption>
+                <thead>
+                    <tr>
+                        <th>Daily Customers</th>
+                    </tr>
+                </thead>
+                {% for customer in daily_customers %}
+                <tbody>
+                    <tr>
+                        <td>{{customer.name}}</td>
+                    </tr>
+                </tbody>
+                {% endfor %}
+            </table>
+        </dvi>
+    </div>
+
+
+
 {% endblock %}
