--- a/trash_collector/customers/templates/account.html
+++ b/trash_collector/customers/templates/account.html
@@ -1,12 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accounts</title>
-</head>
-<body>
-    sample
-</body>
-</html>
+{% extends 'base.html' %}
+{# This top line allows this template to utilizing the styling and layout from the base. All your templates should do the same. #}
+
+{% block title %} Account Info {% endblock %}
+
+{% block header %}Account Info{% endblock %}
+
+{% block content %}
+    {% if user.is_authenticated %}
+
+<h4>Balance :  ${{customer.balance}}</h4>
+<h4>Pick up day : {{customer.pickup_date}}</h4>
+        {% if customer.start_date != null %}
+        <h3>Suspended</h3>
+        Will resume on {{customer.end_date}}.
+        {% endif %}
+    {% else %}
+    <p>You are not currently logged in, Please log in.</p>
+    <a href="{% url 'login' %}">Log In</a>
+    <a href="{% url 'accounts:register' %}">Sign Up</a>
+  {% endif %}
+
+{% endblock %}
