--- a/trash_collector/customers/templates/register.html
+++ b/trash_collector/customers/templates/register.html
@@ -1,12 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-</head>
-<body>
-    sample
-</body>
-</html>
+{% extends 'base.html' %}
+{# This top line allows this template to utilizing the styling and layout from the base. All your templates should do the same. #}
+
+{% block title %} Register {% endblock %}
+
+{% block header %}Register{% endblock %}
+
+{% block content %}
+  {% if user.is_authenticated %}
+
+    Hello Customer {{ user.username }}!<br>
+  <form action="{% url 'customers:registercustomer'%}" method ="post">
+      {% csrf_token %}
+      Name:<input type="text" name ="name" id="name"><br>
+      Pickup day:<input type="text" name = "pickup_date" id="pickup_date"><br>
+      Balance:<input type="text" name = "balance" id="balance"><br>
+      Zipcode:<input type="text" name = "zipcode" id="zipcode"><br>
+      Address:<input type="text" name = "address" id="address"><br>
+      <input type="submit" value="Submit">
+  </form>
+  {% else %}
+    <p>You are not currently logged in, Please log in</p>
+    <a href="{% url 'login' %}">Log In</a>
+    <a href="{% url 'accounts:register' %}">Sign Up</a>
+  {% endif %}
+{% endblock %}
