--- a/trash_collector/customers/templates/weekly_pickup.html
+++ b/trash_collector/customers/templates/weekly_pickup.html
@@ -1,12 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Weekly Pickup Day</title>
-</head>
-<body>
-    Sample
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %} Set pick up {% endblock %}
+
+{% block header %}{% endblock %}
+
+{% block content %}
+  {% if user.is_authenticated %}
+    Hello Customer {{ user.username }}!
+  <p>Please select your requested pick-up date.</p>
+  <form action="{% url 'customers:setpickup'%}" method ="post">
+      {% csrf_token %}
+      Please select day of the week:<input type="text" name ="name" id="name"><input type="submit" value="Submit">
+  </form>
+  {% else %}
+    <p>You are not currently logged in, Please log in</p>
+    <a href="{% url 'login' %}">Log In</a>
+    <a href="{% url 'accounts:register' %}">Sign Up</a>
+  {% endif %}
+{% endblock %}
