--- a/trash_collector/employees/templates/employees/create.html
+++ b/trash_collector/employees/templates/employees/create.html
@@ -1,19 +1,23 @@
 {% extends 'base.html' %}
+{# This top line allows this template to utilizing the styling and layout from the base. All your templates should do the same. #}
 
-{% block title %} Create Account {% endblock %}
+{% block title %} Employee Account {% endblock %}
 
-{% block header %} Create Account {% endblock %}
+{% block header %}<h1 class="display-1 text-center" id="title">Create Account</h1>{% endblock %}
 
 {% block content %}
-<h2>Hello {{ user.username }}!</h2>
-<div class="container">
-<form action="{% url 'employees:create' %}" method="post">
-    {% csrf_token %}
-    Name: <input type="text" name="name" id="name"><br>
-    <br>
-    Zip Code: <input type="text" name="zip_code" id="zip_code"><br>
-    <br>
-    <input type="submit" value="Submit">
-</form>
+<div class="row row-cols-auto d-flex justify-content-center">
+  <div class="col"></div>
+  <div class="col">
+    <div class="mb-3">
+      <form class="form-control" action="{% url 'employees:create' %}" method="POST">
+      {% csrf_token %}
+      Name:<input class="form-control" type="text" name="name" id="name"><br>
+      Zip Code:<input class="form-control" type="text" name="zip_code" id="zip_code"><br>
+      <input class="form-control" type="submit" value="Create Account">
+    </form>
+    </div>
+  </div>
+  <div class="col"></div>
 </div>
 {% endblock %}
