fixed bootstrap version

--- a/trash_collector/templates/home.html
+++ b/trash_collector/templates/home.html
@@ -2,7 +2,9 @@
 
 {% block title %} Home Portal {% endblock %}
 
-{% block header %} Log-in {% endblock %}
+{% block header %}
+    <h1 class="display-1 text-center" id="title">Home Portal</h1>
+{% endblock %}
 
 {% block content %}
 <div class="row row-cols-auto">
@@ -26,4 +28,5 @@
   <div class="col"></div>
 </div>
 {% endblock %}
+
 {# This is the home page that allows a logged out user to register or log in #}
