--- a/trash_collector/customers/templates/customers/index.html
+++ b/trash_collector/customers/templates/customers/index.html
@@ -1,16 +1,21 @@
 {% extends 'base.html' %}
-{# This top line allows this template to utilizing the styling and layout from the base. All your templates should do the same. #}
+{# This top line allows this template to utilizing the styling and layout from the base. All your templates should do
+the same. #}
 
 {% block title %} Customer Home {% endblock %}
 
 {% block header %} Customer Home {% endblock %}
 
 {% block content %}
-  {% if user.is_authenticated %}
-    Hello Customer {{ user.username }}!
-  {% else %}
-    <p>You are at the customer index, but you are not logged in.</p>
-    <a href="{% url 'login' %}">Log In</a>
-    <a href="{% url 'accounts:register' %}">Sign Up</a>
-  {% endif %}
+{% if user.is_authenticated %}
+<div class="container">
+  <h1>Hello {{ user.username }}!</h1>
+  <h2>Your current pick up date is: {{ logged_in_customer.reg_pickup }} </h2>
+</div>
+
+{% else %}
+<p>You are at the customer index, but you are not logged in.</p>
+<a href="{% url 'login' %}">Log In</a>
+<a href="{% url 'accounts:register' %}">Sign Up</a>
+{% endif %}
 {% endblock %}
