--- a/trash_collector/customers/templates/customers/create.html
+++ b/trash_collector/customers/templates/customers/create.html
@@ -1,49 +1,26 @@
-{% extends 'base.html' %} 
-{% block title %}{% block header%} Create Customer {%endblock %}{% endblock %} {% block content %}
-<div class="container col-6">
-  <form method="POST" action="{% url 'customers:create' %}">
-    {% csrf_token %}
-    <div class="input-group mb-3">
-      <span class="input-group-text" id="basic-addon2">Full Name</span>
-      <input
-        type="text"
-        class="form-control"
-        placeholder="name"
-        aria-label="name"
-        name="name"
-        id="name"
-      />
-    </div>
+{% extends 'base.html' %}
+{# This top line allows this template to utilizing the styling and layout from the base. All your templates should do the same. #}
 
-    <div class="input-group mb-3">
-      <span class="input-group-text" id="basic-addon2">5 digit Zipcode</span>
-      <input
-        type="text"
-        class="form-control"
-        placeholder="zipcode"
-        aria-label="zip_code"
-        name="zip_code"
-        id="zip_code"
-      />
-    </div>
+{% block title %} Customer Account {% endblock %}
 
-    <div class="input-group mb-3">
-      <label class="input-group-text" for="pickup_day"
-        >Pickup Day</label
-      >
-      <select class="form-select" name="pickup_day" id="pickup_day">
-        <option selected>Choose...</option>
-        <option value="Monday">Monday</option>
-        <option value="Tuesday">Tuesday</option>
-        <option value="Wednesday">Wednesday</option>
-        <option value="Thursday">Thursday</option>
-        <option value="Friday">Friday</option>
-      </select>
+{% block header %}<h1 class="display-1 text-center" id="title">Create Account</h1> {% endblock %}
+
+{% block content %}
+<div class="row row-cols-auto d-flex justify-content-center">
+  <div class="col"></div>
+  <div class="col">
+    <div class="mb-3">
+      <form class="form-control" action="{% url 'customers:create' %}" method="POST">
+        {% csrf_token %}
+        Name:<input class="form-control" type="text" name="name" id="name"><br>
+        Weekly Pickup Day:<input class="form-control" type="text" name="weekly_pickup_day" id="weekly_pickup_day"><br>
+        One Time Pickup Date:<input class="form-control" type="date" name="one_time_pickup" id="one_time_pickup"><br>
+        Address:<input  class="form-control" type="text" name="address" id="address"><br>
+        Zip Code:<input class="form-control" type="text" name="zip_code" id="zip_code"><br>
+        <input type="submit" class="form-control" value="Create Account">
+      </form>
     </div>
-    <div class="input-group mb-3">
-      <input type="submit" value="Submit Info" class="btn btn-primary" />
-    </div>
-  </form>
+  </div>
+  <div class="col-3"></div>
 </div>
-
 {% endblock %}
