added underscore to lines 32 and 33

--- a/trash_collector/templates/base.html
+++ b/trash_collector/templates/base.html
@@ -29,8 +29,8 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="{% url 'customers:index'%}">Home</a>
-          <a class="nav-link" href="{% url 'customers:registercustomer'%}">Register</a>
-          <a class="nav-link" href="{% url 'customers:setpickup'%}">Set pickup</a>
+          <a class="nav-link" href="{% url 'customers:register_customer'%}">Register</a>
+          <a class="nav-link" href="{% url 'customers:set_pickup'%}">Set pickup</a>
           <a class="nav-link" href="{% url 'customers:onetime_pickup'%}">One time pickup</a>
           <a class="nav-link" href="{% url 'customers:pickup_suspension'%}">Suspend services</a>
           <a class="nav-link" href="{% url 'customers:account_info'%}">Account info</a>
