--- a/trash_collector/customers/templates/customers/index.html
+++ b/trash_collector/customers/templates/customers/index.html
@@ -1,16 +1,68 @@
 {% extends 'base.html' %}
-{# This top line allows this template to utilizing the styling and layout from the base. All your templates should do the same. #}
+{# This top line allows this template to utilizing the styling and layout from the base. All your templates should do
+the same. #}
 
-{% block title %} Customer Home {% endblock %}
-
-{% block header %} Customer Home {% endblock %}
+{% block title %} Customers Home {% endblock %}
+{% block header %} <h1 class="display-1 text-center" id="title">Customers Home</h1> {% endblock %}
 
 {% block content %}
-  {% if user.is_authenticated %}
-    Hello Customer {{ user.username }}!
-  {% else %}
-    <p>You are at the customer index, but you are not logged in.</p>
-    <a href="{% url 'login' %}">Log In</a>
-    <a href="{% url 'accounts:register' %}">Sign Up</a>
-  {% endif %}
+  <div class="row row-cols-auto d-flex justify-content-center">
+    {% if user.is_authenticated %}
+    <div class="col"></div>
+    <div class="col" id="custom-table">
+      <h1 class="display-3 text-center" id="subtitle">Hello, {{ user.username }}</h1>
+      <table class="table table-striped table-hover table-light">
+        <caption style="color:whitesmoke;font-size:.75rem;">Profile Details</caption>
+        <tbody>
+          <tr>
+            <th>Name</th> <!-- Row Header-->
+            <td>{{ specific_customer.name }}</td> <!-- Row Data -->
+          </tr>
+          <tr>
+            <th>Address</th>
+            <td>{{ specific_customer.address }}</td>
+          </tr>
+          <tr>
+            <th>Zip Code</th>
+            <td>{{ specific_customer.zip_code }}</td>
+          </tr>
+          <tr>
+            <th>Weekly Pickup Day</th>
+            <td>{{ specific_customer.weekly_pickup_day }}</td>
+          </tr>
+          <tr>
+            <th>One-time Pickup</th>
+            <td>{{ specific_customer.onetime_pickup }}</td>
+          </tr>
+          <tr>
+            <th>Balance</th>
+            <td>{{ specific_customer.balance }}</td>
+          </tr>
+          <tr>
+            <th>Start Break</th>
+            <td>{{ specific_customer.start_suspension }}</td>
+          </tr>
+          <tr>
+            <th>End Break</th>
+            <td>{{ specific_customer.end_suspension }}</td>
+          </tr>
+        </tbody>
+      </table>
+      {% if specific_customer.has_suspension == True %}
+        <p style="color:red;font-size:1rem;">You are currently in a suspended status!</p>
+      {% else %}
+        <p style="color:whitesmoke;font-size:1rem;">You are not in a suspended status.</p>
+      {% endif %}
+    </div>
+    <div class="col"></div>
+    {% else %}
+    <div class="col"></div>
+    <div class="col">
+      <p>You are at the customer index, but you are not logged in.</p>
+      <a href="{% url 'login' %}">Log In</a>
+      <a href="{% url 'accounts:register' %}">Sign Up</a>
+    </div>
+    <div class="col-4"></div>
+      {% endif %}
+  </div>
 {% endblock %}
